--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "hagamos-numeros-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://furball018.github.io/hagamos-numeros-react",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.1",
+    "gh-pages-deploy": "^0.4.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "react": "^16.6.3",
@@ -15,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages-deploy",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
